--- a/trains/templates/trains/trains.html
+++ b/trains/templates/trains/trains.html
@@ -1,4 +1,4 @@
-{% extends "depot/base.html" %}
+{% extends "location/base.html" %}
 {% block content %}
     <div class="table-responsive">
         <table class="table table-bordered border-primary ">
