--- a/location/templates/location/base.html
+++ b/location/templates/location/base.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Location</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'location' %}">Location</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'trains-list' %}">Trains</a>
