--- a/homedepot/templates/homedepot/base.html
+++ b/homedepot/templates/homedepot/base.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'homedepot' %}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'location' %}">Location</a>
@@ -37,10 +37,10 @@
             <a class="nav-link active" aria-current="page" href="{% url 'trains-list' %}">Trains</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Application</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'appdepot' %}">Application</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">About</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'aboutdepot' %}">About</a>
           </li>
         </ul>
         <form class="d-flex">
