--- a/location/templates/location/location_test.html
+++ b/location/templates/location/location_test.html
@@ -1,4 +1,4 @@
-{% extends "location/base.html" %}
+{% extends "homedepot/base.html" %}
 {% block content %}
 <div class="table-responsive">
     <table class="table">
