--- a/trains/templates/trains/train_form.html
+++ b/trains/templates/trains/train_form.html
@@ -1,4 +1,4 @@
-{% extends 'location/base.html' %}
+{% extends 'homedepot/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
